# paleofetch

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  config.h  config.h.in  paleofetch.h
